crates/yajlir/src/parser/snapshots/yajlir__parser__lexer__tests__lex_case_"__(*+,".snap
---
source: crates/yajlir/src/parser/lexer.rs
expression: "(token, offset, lexer)"
---
(
    Ok(
        Error,
    ),
    2,
    Lexer {
        allow_comments: false,
        validate_utf8: true,
        error: Some(
            StringInvalidEscapedChar,
        ),
    },
)
